# cp-notebook

./: .gitignore  CMakeLists.txt
data/local_tests/data-structures/dsu/input/: test1.txt
data/local_tests/math/basic/fexp/input/: test1.txt  test2.txt
data/local_tests/math/basic/fexp/output/: test2.txt
include/cp-notebook/: base.h
include/cp-notebook/data-structures/: bit.h  dsu.h  lazysegtree.h  segtree.h  sparse.h
include/cp-notebook/math/: basic.h
src/: base.cpp
src/data-structures/: bit.cpp  dsu.cpp  sparse.cpp
src/math/: basic.cpp
tests/local/data-structures/: bit.cpp  dsu.cpp  segtree.cpp  sparse.cpp
tests/local/math/: basic.cpp
